# ARD

./: ARD.sln  CMakeLists.txt  FindFFTW3.cmake  Makefile  README  Rakefile  microphone.h  point_microphone.h  source.h
2DVisualizer/: CMakeLists.txt  Makefile  constructor_test.cpp  main.cpp  measure.rb  output.txt  sound_field.cpp  sound_field.h  transforms.cpp  transforms.h  vtk_test.cpp
2DVisualizer/Xcode/2DVisualizer.xcodeproj/: project.pbxproj
2DVisualizer/mac/: CMakeLists.txt  SDLMain.m
2DVisualizer/msvc/2DVisualizer/: 2DVisualizer.vcxproj  2DVisualizer.vcxproj.filters
2DVisualizer/msvc/2DVisualizer_test/: 2DVisualizer_test.vcxproj  2DVisualizer_test.vcxproj.filters
2DVisualizer/test/: CMakeLists.txt  boost_rand_test.cpp  lambda_test.cpp  multi_array_test.cpp  transforms_test.cpp
ARD/: ARD.cpp  ARD.h  ARD.vcxproj  ARD.vcxproj.filters  CMakeLists.txt  ard_engine.h
ARD/Xcode/ARD/: ARD-Info.plist
ARD/Xcode/ARD.xcodeproj/: project.pbxproj
ARD/Xcode/ARD.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
ARD/Xcode/ARD_test/: ARD_test.1
ARD/include/: ARD.h  ard_engine.h  array_interface.h  cufft_dct_engine_factory.h  cufft_dct_forward_engine.h  cufft_real_array.h  dct_engine.h  dct_engine_factory.h  direct_reference_microphone.h  fftw_array.h  fftw_dct_engine.h  fftw_dct_engine_factory.h  fftw_double_dct_engine.h  fftw_double_dct_engine_factory.h  fftw_float_allocator.h  fftw_float_dct_engine.h  fftw_multi_array.h  fftw_plan.h  force_field.h  force_spectrum.h  geometry.h  microphone.h  mode_coefficient.h  mode_map.h  mode_pool.h  multi_array.h  point_microphone.h  point_source.h  position.h  power.h  precision.h  pressure.h  pressure_field.h  pressure_map.h  pressure_spectrum.h  rectangular_geometry.h  rectangular_sound_field.h  scene.h  signal.h  size.h  (+6 more)
ARD/msvc/ARD/: ARD.vcxproj  ARD.vcxproj.filters
ARD/msvc/ARD_test/: ARD_test.vcxproj  ARD_test.vcxproj.filters
ARD/src/: ard_engine.cpp  array_interface.cpp  cufft_dct_engine_factory.cpp  cufft_dct_forward_engine.cpp  cufft_real_array.cpp  fftw_array.cpp  fftw_dct_engine.cpp  fftw_dct_engine_factory.cpp  fftw_double_dct_engine.cpp  fftw_double_dct_engine_factory.cpp  fftw_float_dct_engine.cpp  force_field.cpp  force_spectrum.cpp  microphone.cpp  mode_map.cpp  mode_pool.cpp  multi_array.cpp  point_microphone.cpp  position.cpp  pressure.cpp  pressure_field.cpp  pressure_map.cpp  pressure_spectrum.cpp  rectangular_geometry.cpp  scene.cpp  signal.cpp  size.cpp  sound_field.cpp  source.cpp  spectrum.cpp  spectrum_pool.cpp  whole_field_microphone.cpp
ARD/test/: ARD_test.cpp  CMakeLists.txt  Makefile  ard_engine_test.cpp  cufft_dct_engine_factory_test.cpp  cufft_real_array_test.cpp  cufft_test.cpp  direct_reference_microphone.cpp  fftw_array_test.cpp  fftw_dct_engine_factory_test.cpp  fftw_dct_engine_test.cpp  fftw_double_dct_engine_factory_test.cpp  fftw_double_dct_engine_test.cpp  fftw_float_dct_engine_test.cpp  fftw_multi_array_test.cpp  fftw_test.cpp  force_field_test.cpp  microphone_test.cpp  mode_map_test.cpp  mode_pool_test.cpp  multi_array_test.cpp  output_fftw_array.cpp  output_fftw_array.h  point_microphone_test.cpp  point_source_test.cpp  position_test.cpp  pressure_field_test.cpp  pressure_map_test.cpp  pressure_spectrum_test.cpp  scene_test.cpp  signal_test.cpp  size_test.cpp  sound_field_test.cpp  source_test.cpp  spectrum_pool_test.cpp  valarray_test.cpp  whole_field_microphone_test.cpp
ARD/test/plot/: output_array.cpp  output_array.h  output_fftw_array.cpp  plot_1d.py  plot_2d.py
ARD_test/: ARD_test.vcxproj  ARD_test.vcxproj.filters  dll_build_test.cpp  mode_test.cpp  pressure_test.cpp  rectangular_geometry_test.cpp
ARD_test/test/: ard_engine_test.cpp  fftw_test.cpp  microphone_test.cpp  mode_map_test.cpp  mode_pool_test.cpp  mode_test.cpp  multi_array_test.cpp  pressure_map_test.cpp  pressure_test.cpp  size_test.cpp
Frameworks/SDL.framework/Versions/A/: SDL
Frameworks/SDL.framework/Versions/A/Resources/: Info.plist
SoundEngine/: SoundEngine.vcxproj
SoundEngine/msvc/SoundEngine/: SoundEngine.vcxproj
Xcode/ARD.xcworkspace/: contents.xcworkspacedata
measurement/: time-trial_cell-size_exp-of-2.rb
mockup/1D_ARD/: main.py
mockup/2D_ARD/: 1dDCT_using_FFT.py  main.py
mockup/DCT/: dct_type2.py
msvc/: ARD.sln
test/: ARD_test.rake  gtest_test.cpp  multi_array_test.cpp  source_test.cpp
