cmake_minimum_required(VERSION 2.8)
project(ARD CXX)
list(APPEND CMAKE_MODULE_PATH ${CMAKE_SOURCE_DIR})

find_package(FFTW3 REQUIRED)
find_package(CUDA 4.0 REQUIRED)
#set(CMAKE_CXX_COMPILER "g++-4.7")
set(CMAKE_CXX_FLAGS "-Wall -std=c++11")
set(GTEST_INCLUDE_DIR ${CMAKE_SOURCE_DIR}/gtest/include)
set(CMAKE_BUILD_TYPE Release)
add_subdirectory(2DVisualizer)
add_subdirectory(ARD)
add_subdirectory(gtest)
